# graffity_report

./: .dockerignore  .gitignore  AMVERA_DEPLOY_GUIDE.md  Dockerfile  POSTGIS_SETUP.md  Procfile  QUICK_START.md  RAILWAY_DB_SETUP.md  README.md  URL_CONFIG.md  admin.html  amvera.yml  docker-compose.yml  home-application.html  index.html  init_db.sql  new-application.html  nixpacks.json  nixpacks.toml  pyproject.toml  railway.json  railway.toml  test_upload.html  update_urls.ps1  update_urls.sh
bot/: Dockerfile  requirements.txt
docs/: admin.css  admin.html  app.js  app_photo_fix.js  config.js  dadata.js  index.html  photos.html  style.css
fronted/: app.js  index.html  style.css
src/: Dockerfile  dadata_helper.py  index.html  main.py  models.py  requirements.txt  singleton.py  util.py  web_app.py
src/app/: __init__.py
src/app/admin/: __init__.py  admin_routes.py
tests/: test_api.py  test_dadata.py
