[project]
name = "graffity_report"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "flask>=3.1.2",
    "flask_cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "geoalchemy2>=0.14.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "python-decouple>=3.8.0",
    "pre-commit",
    "dadata>=21.12.0",
    "gunicorn>=21.2.0",
]

[project.scripts]
start = "gunicorn --bind 0.0.0.0:8000 --workers 2 --timeout 120 --chdir src main:app"
